--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="accueil" id="home">
         <img src="ressources/logoespa.PNG" alt="logo polytechnique" class="logo-kyoto">
         <h1>Campus Vontovorona</h1>
-        <p class="sous-titre">Le village des futurs ingenieurs</p>
+        <p class="sous-titre">Village des futurs ingenieurs</p>
         <a href="#asym" class="btn-accueil">En savoir plus</a>
     </div>
 
